--- a/hello.world(ZerO).html
+++ b/hello.world(ZerO).html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
 <html  >
 <head>
-  <!-- Site made with Mobirise Website Builder v5.4.1, https://mobirise.com -->
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
-  <link rel="shortcut icon" href="assets/images/t404owo-sticker.png" type="image/x-icon">
-  <link rel="icon" href="https://cdn.glitch.com/f6cb427c-2cdb-4693-bc00-9d3e2991008c%2Ft404owo-sticker.png?v=1631433559254">
+  <link rel="icon" href="https://cdn.glitch.me/f6cb427c-2cdb-4693-bc00-9d3e2991008c%2F0A6AC9F9-A013-462C-AD03-54B6937EC74E.png">
+  <link rel="shortcut icon" href="https://cdn.glitch.me/f6cb427c-2cdb-4693-bc00-9d3e2991008c%2F0A6AC9F9-A013-462C-AD03-54B6937EC74E.png" type="image/x-icon">
   <meta name="description" content="”What can I see... a new world...?
 It appears, that I am living in a world, where no-one lives...”
 
@@ -81,7 +80,7 @@ Bandcamp">
                     <a class="iconfont-wrapper" href="https://music.apple.com/artist/t404-null/1583561849" target="_blank">
                         <span class="p-2 mbr-iconfont socicon-itunes socicon"></span>
                     </a>
-		                <a class="iconfont-wrapper" href="https://soundcloud.com/t404owo" target="_blank">
+		                <a class="iconfont-wrapper" href="https://soundcloud.com/t404null" target="_blank">
                         <span class="p-2 mbr-iconfont socicon-soundcloud socicon"></span>
                     </a>
                     <a class="iconfont-wrapper" href="https://discord.gg/YJmkAFbKFX" target="_blank">
@@ -108,7 +107,7 @@ Bandcamp">
                         <h1 class="card-title mbr-fonts-style mb-3 display-2">
                             <strong>hello.world(Zer/O)</strong></h1>
                         <p class="mbr-text mbr-fonts-style display-7">"What can I see... a new world...?<br>It appears, that I am living in a world, where no-one lives..."<br>
-                          <br>"hello.world(Zer/O)" is a first release from t404:null at 08.22.2021 on Youtube, Bandcamp, and Soundcloud.<br>&nbsp;It was also the first song t404:null makes with tons ”easter eggs” and mixed with more-styles genre called ”Full-Flavor”(200step, UK Hardcore, Electronic, Dance, and more..).<br><br>Available in:<br><a href="https://music.apple.com/album/hello-world-zer-o-single/1583561848" class="text-primary">Itunes/Apple Music</a><br><a href="https://open.spotify.com/album/0MX0zluXBvEerdCL12Cd1s" class="text-primary">Spotify(Release date at 09.20.2021)</a><br><a href="https://youtu.be/0apqJaWY5QM" class="text-primary">YouTube</a><br><a href="https://youtu.be/kVX6kdnvhAo" class="text-primary">YouTube Music(Release date at 09.20.2021)<br><a href="https://m.soundcloud.com/t404owo/helloworldzero" class="text-primary">Soundcloud</a><br><a href="https://t404null.bandcamp.com/album/hello-world-zer-o" class="text-primary">Bandcamp</a></p>
+                          <br>"hello.world(Zer/O)" is a first release from t404:null at 08.22.2021 on Youtube, Bandcamp, and Soundcloud.<br>&nbsp;It was also the first song t404:null makes with tons ”easter eggs” and mixed with more-styles genre called ”Full-Flavor”(200step, UK Hardcore, Electronic, Dance, and more..).<br><br>Available in:<br><a href="https://music.apple.com/album/hello-world-zer-o-single/1583561848" class="text-primary">Itunes/Apple Music</a><br><a href="https://open.spotify.com/album/0MX0zluXBvEerdCL12Cd1s" class="text-primary">Spotify(Release date at 09.20.2021)</a><br><a href="https://youtu.be/0apqJaWY5QM" class="text-primary">YouTube</a><br><a href="https://youtu.be/kVX6kdnvhAo" class="text-primary">YouTube Music(Release date at 09.20.2021)<br><a href="https://m.soundcloud.com/t404null/helloworldzero" class="text-primary">Soundcloud</a><br><a href="https://t404null.bandcamp.com/album/hello-world-zer-o" class="text-primary">Bandcamp</a></p>
                         
                     </div>
                 </div>
@@ -163,7 +162,7 @@ Bandcamp">
                             <span class="mbr-iconfont mbr-iconfont-social socicon-spotify socicon"></span>
                         </a>
                     </div><div class="soc-item">
-                        <a href="https://soundcloud.com/t404owo" target="_blank">
+                        <a href="https://soundcloud.com/t404null" target="_blank">
                             <span class="mbr-iconfont mbr-iconfont-social socicon-soundcloud socicon"></span>
                         </a>
                     </div><div class="soc-item">
