--- a/possession.html
+++ b/possession.html
@@ -5,11 +5,11 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
-  <link rel="shortcut icon" href="assets/images/t404owo-sticker.png" type="image/x-icon">
-  <link rel="icon" href="https://cdn.glitch.com/f6cb427c-2cdb-4693-bc00-9d3e2991008c%2Ft404owo-sticker.png?v=1631433559254">
+  <link rel="icon" href="https://cdn.glitch.me/f6cb427c-2cdb-4693-bc00-9d3e2991008c%2F0A6AC9F9-A013-462C-AD03-54B6937EC74E.png">
+  <link rel="shortcut icon" href="https://cdn.glitch.me/f6cb427c-2cdb-4693-bc00-9d3e2991008c%2F0A6AC9F9-A013-462C-AD03-54B6937EC74E.png" type="image/x-icon">
   <meta name="description" content="”Ghost and monsters are gathering you...”
 
-”PoΣΣεssion (Possession)” is a 1st release for a DACHiTRAX album at 10.25.2021 from t404:null and being realeased at 10.31.2021 on Youtube and Soundcloud.
+”PoΣΣεssion (Possession)” is a 1st release for a DACHiTRAX album at 10.25.2021 from t404:null and being realeased at 10.31.2021 on Youtube, Bandcamp and Soundcloud.
 Available in:
 YouTube
 Soundcloud
@@ -75,7 +75,7 @@ Bandcamp">
                     <a class="iconfont-wrapper" href="https://music.apple.com/artist/t404-null/1583561849" target="_blank">
                         <span class="p-2 mbr-iconfont socicon-itunes socicon"></span>
                     </a>
-		                <a class="iconfont-wrapper" href="https://soundcloud.com/t404owo" target="_blank">
+		                <a class="iconfont-wrapper" href="https://soundcloud.com/t404null" target="_blank">
                         <span class="p-2 mbr-iconfont socicon-soundcloud socicon"></span>
                     </a>
                     <a class="iconfont-wrapper" href="https://discord.gg/YJmkAFbKFX" target="_blank">
@@ -102,7 +102,7 @@ Bandcamp">
                         <h1 class="card-title mbr-fonts-style mb-3 display-2">
                             <strong>PoΣΣεssion (Possession)</strong></h1>
                         <p class="mbr-text mbr-fonts-style display-7">"Ghost and monsters are gathering you..."<br>
-                          <br>"PoΣΣεssion (Possession)" is a 1st release for a DACHiTRAX album at 10.25.2021 from t404:null and being realeased at 10.31.2021 on Youtube and Soundcloud.<br>&nbsp;It's also the first GHOST-Rip-off attempt from t404:null.<br><br>Available in:<br><a href="https://youtu.be/oXGBuKSi05E" class="text-primary">YouTube</a><br><a href="https://m.soundcloud.com/t404owo/possession" class="text-primary">Soundcloud</a><br><a href="https://t404null.bandcamp.com/" class="text-primary">Bandcamp(Coming later)</a></p>
+                          <br>"PoΣΣεssion (Possession)" is a 1st release for a DACHiTRAX album at 10.25.2021 from t404:null and being realeased at 10.31.2021 on Youtube and Soundcloud.<br>&nbsp;It's also the first GHOST-Rip-off attempt from t404:null.<br><br>Available in:<br><a href="https://youtu.be/oXGBuKSi05E" class="text-primary">YouTube</a><br><a href="https://m.soundcloud.com/t404null/possession" class="text-primary">Soundcloud</a><br><a href="https://t404null.bandcamp.com/" class="text-primary">Bandcamp(Coming later)</a></p>
                         
                     </div>
                 </div>
@@ -157,7 +157,7 @@ Bandcamp">
                             <span class="mbr-iconfont mbr-iconfont-social socicon-spotify socicon"></span>
                         </a>
                     </div><div class="soc-item">
-                        <a href="https://soundcloud.com/t404owo" target="_blank">
+                        <a href="https://soundcloud.com/t404null" target="_blank">
                             <span class="mbr-iconfont mbr-iconfont-social socicon-soundcloud socicon"></span>
                         </a>
                     </div><div class="soc-item">
