--- a/song_usage_terms/index.html
+++ b/song_usage_terms/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html  >
 <head>
-  <!-- Site made with Mobirise Website Builder v5.4.1, https://mobirise.com -->
+  
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
-  <link rel="shortcut icon" href="assets/images/t404owo-sticker.png" type="image/x-icon">
-  <link rel="icon" href="https://cdn.glitch.com/f6cb427c-2cdb-4693-bc00-9d3e2991008c%2Ft404owo-sticker.png?v=1631433559254">
+  <link rel="icon" href="https://cdn.glitch.me/f6cb427c-2cdb-4693-bc00-9d3e2991008c%2F0A6AC9F9-A013-462C-AD03-54B6937EC74E.png">
+  <link rel="shortcut icon" href="https://cdn.glitch.me/f6cb427c-2cdb-4693-bc00-9d3e2991008c%2F0A6AC9F9-A013-462C-AD03-54B6937EC74E.png" type="image/x-icon">
   <meta name="description" content="Hello there! Please be friendly and read this ”terms of using my songs” before use my(t404:null's) song for any purposes.">
   
   
@@ -68,7 +68,7 @@
                     <a class="iconfont-wrapper" href="https://music.apple.com/artist/t404-null/1583561849" target="_blank">
                         <span class="p-2 mbr-iconfont socicon-itunes socicon"></span>
                     </a>
-		                <a class="iconfont-wrapper" href="https://soundcloud.com/t404owo" target="_blank">
+		                <a class="iconfont-wrapper" href="https://soundcloud.com/t404null" target="_blank">
                         <span class="p-2 mbr-iconfont socicon-soundcloud socicon"></span>
                     </a>
                     <a class="iconfont-wrapper" href="https://discord.gg/YJmkAFbKFX" target="_blank">
@@ -201,7 +201,7 @@
                             <span class="mbr-iconfont mbr-iconfont-social socicon-spotify socicon"></span>
                         </a>
                     </div><div class="soc-item">
-                        <a href="https://soundcloud.com/t404owo" target="_blank">
+                        <a href="https://soundcloud.com/t404null" target="_blank">
                             <span class="mbr-iconfont mbr-iconfont-social socicon-soundcloud socicon"></span>
                         </a>
                     </div><div class="soc-item">
