--- a/possession.html
+++ b/possession.html
@@ -5,8 +5,8 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
-  <link rel="icon" href="https://cdn.glitch.me/f6cb427c-2cdb-4693-bc00-9d3e2991008c%2F0A6AC9F9-A013-462C-AD03-54B6937EC74E.png">
-  <link rel="shortcut icon" href="https://cdn.glitch.me/f6cb427c-2cdb-4693-bc00-9d3e2991008c%2F0A6AC9F9-A013-462C-AD03-54B6937EC74E.png" type="image/x-icon">
+  <link rel="icon" href="../assets/images/t404owo-sticker.png">
+  <link rel="shortcut icon" href="../assets/images/t404owo-sticker.png" type="image/x-icon">
   <meta name="description" content="”Ghost and monsters are gathering you...”
 
 ”PoΣΣεssion (Possession)” is a 1st release for a DACHiTRAX album at 10.25.2021 from t404:null and being realeased at 10.31.2021 on Youtube, Bandcamp and Soundcloud.
