Fixed some stuffs...

--- a/hello.world(ZerO).html
+++ b/hello.world(ZerO).html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
-  <link rel="icon" href="../assets/images/t404owo-sticker.png">
-  <link rel="shortcut icon" href="../assets/images/t404owo-sticker.png" type="image/x-icon">
+  <link rel="icon" href="https://cdn.glitch.global/2d9e31c1-a947-46cd-9fd2-8c92be70abe2/t404_null%20Icon.png">
+  <link rel="shortcut icon" href="https://cdn.glitch.global/2d9e31c1-a947-46cd-9fd2-8c92be70abe2/t404_null%20Icon.png" type="image/x-icon">
   <meta name="description" content="”What can I see... a new world...?
 It appears, that I am living in a world, where no-one lives...”
 
