--- a/release/index.html
+++ b/release/index.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
-  <link rel="icon" href="https://cdn.glitch.me/f6cb427c-2cdb-4693-bc00-9d3e2991008c%2F0A6AC9F9-A013-462C-AD03-54B6937EC74E.png">
-  <link rel="shortcut icon" href="https://cdn.glitch.me/f6cb427c-2cdb-4693-bc00-9d3e2991008c%2F0A6AC9F9-A013-462C-AD03-54B6937EC74E.png" type="image/x-icon">
+  <link rel="icon" href="https://cdn.glitch.global/2d9e31c1-a947-46cd-9fd2-8c92be70abe2/t404_null%20Icon.png">
+  <link rel="shortcut icon" href="https://cdn.glitch.global/2d9e31c1-a947-46cd-9fd2-8c92be70abe2/t404_null%20Icon.png" type="image/x-icon">
   <meta name="description" content="Hello there! I'm t404:null (a.k.a t404owo).
 I write/make music (DTM), and for every releases I'll post my musics in this website. If you have any requests or questions, please contact me.">
   
@@ -104,6 +104,7 @@ I write/make music (DTM), and for every releases I'll post my musics in this web
                     <div class="mbr-section-btn item-footer mt-2"><a href="hello.world(ZerO).html" class="btn item-btn btn-black display-7" target="_blank">Details &gt;</a></div>
                 </div>
             </div>
+          
             <div class="item features-image сol-12 col-md-6 col-lg-4 active">
                 <div class="item-wrapper">
                     <div class="item-img">
@@ -112,11 +113,12 @@ I write/make music (DTM), and for every releases I'll post my musics in this web
                     <div class="item-content">
                         <h5 class="item-title mbr-fonts-style display-5"><strong>PoΣΣεssion (Possession)</strong></h5>
                         <h6 class="item-subtitle mbr-fonts-style mt-1 display-7">(from Mayonaka Dancehall!!! (DACHiTRAX))</h6>
-                        <p class="mbr-text mbr-fonts-style mt-3 display-7">Ghost and monsters are gathering you...&nbsp;<br><br>Release Date: 10.31.2021<br>Bandcamp Release Date: soon</p>
+                        <p class="mbr-text mbr-fonts-style mt-3 display-7">Ghost and monsters are gathering you...&nbsp;<br><br>Release Date: 10.31.2021<br>Bandcamp Release Date: 11.13.2021</p>
                     </div>
                     <div class="mbr-section-btn item-footer mt-2"><a href="possession.html" class="btn item-btn btn-black display-7" target="_blank">Details &gt;</a></div>
                 </div>
             </div>
+          
         </div>
     </div>
 </section>
