--- a/song_usage_terms/index.html
+++ b/song_usage_terms/index.html
@@ -5,8 +5,8 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
-  <link rel="icon" href="https://cdn.glitch.me/f6cb427c-2cdb-4693-bc00-9d3e2991008c%2F0A6AC9F9-A013-462C-AD03-54B6937EC74E.png">
-  <link rel="shortcut icon" href="https://cdn.glitch.me/f6cb427c-2cdb-4693-bc00-9d3e2991008c%2F0A6AC9F9-A013-462C-AD03-54B6937EC74E.png" type="image/x-icon">
+  <link rel="icon" href="https://cdn.glitch.global/2d9e31c1-a947-46cd-9fd2-8c92be70abe2/t404_null%20Icon.png">
+  <link rel="shortcut icon" href="https://cdn.glitch.global/2d9e31c1-a947-46cd-9fd2-8c92be70abe2/t404_null%20Icon.png" type="image/x-icon">
   <meta name="description" content="Hello there! Please be friendly and read this ”terms of using my songs” before use my(t404:null's) song for any purposes.">
   
   
