--- a/contacts/index.html
+++ b/contacts/index.html
@@ -155,12 +155,12 @@ I write/make music (DTM), and for every releases I'll post my musics in this web
     <div class="container">
         <div class="mbr-section-head">
             <h3 class="mbr-section-title mbr-fonts-style align-center mb-0 display-2">
-                <strong>Contact Me</strong>
+                <strong>Contact Me (not done, please send me directly per mail instead here)</strong>
             </h3>
             
         </div>
         <div class="row justify-content-center mt-4">
-            <form action="https://t404null.atwebpages.com/mail/" id="contact-form" novalidate="novalidate" method="post">
+            <form action="http://t404null.atwebpages.com/mail/" id="contact-form" novalidate="novalidate" method="post">
             <div class="form-group">
               <label for="name">Name</label>
               <input type="text" class="form-control" id="name" name="name" placeholder="Your name" required="">
@@ -177,10 +177,12 @@ I write/make music (DTM), and for every releases I'll post my musics in this web
               <label for="messsage">Message</label>
               <textarea class="form-control" id="message" name="message" rows="5" placeholder="Write your message here" required=""></textarea>
             </div>
+            <input type="hidden" class="btn btn-outline-primary" name="submit_v" value="Thus, this message is sent...">
             <input type="submit" class="btn btn-outline-primary" name="submit" id="contact-submit" data-submit="Sending...">
-          </form>
+            </form>
         </div>
     </div>
+  <br>
 </section>  
   
   
@@ -249,7 +251,7 @@ I write/make music (DTM), and for every releases I'll post my musics in this web
             </div>
             <div class="row row-copirayt">
                 <p class="mbr-text mb-0 mbr-fonts-style mbr-white align-center display-7">
-                    © t404:null 2021 - All Rights Reserved</p>
+                    © t404:null 2021-2023 - All Rights Reserved</p>
             </div>
         </div>
     </section>
