--- a/hyper_liminality/index.html
+++ b/hyper_liminality/index.html
@@ -7,10 +7,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
   <link rel="icon" href="https://cdn.glitch.global/2d9e31c1-a947-46cd-9fd2-8c92be70abe2/t404_null%20Icon.png">
   <link rel="shortcut icon" href="https://cdn.glitch.global/2d9e31c1-a947-46cd-9fd2-8c92be70abe2/t404_null%20Icon.png" type="image/x-icon">
-  <meta name="description" content="”Ghost and monsters are gathering you...”
-
-”Hyper Liminality” is a collaboration track from t404:null, trung-nova, AXiS (AKA JP) and is released on Youtube, Bandcamp and Soundcloud at Aug. 22 2022...
-Available in:
+  <meta name="description" content="”Hyper Liminality” is a collaboration track from t404:null, trung-nova, AXiS (AKA JP) and is released on Youtube, Bandcamp and Soundcloud at Aug. 22 2022...
+Available on:
 YouTube
 Soundcloud
 Bandcamp,
@@ -177,7 +175,7 @@ and more...">
             </div>
             <div class="row row-copirayt">
                 <p class="mbr-text mb-0 mbr-fonts-style mbr-white align-center display-7">
-                    © t404:null 2021 - All Rights Reserved</p>
+                    © t404:null 2021-2023 - All Rights Reserved</p>
             </div>
         </div>
     </div>
