--- a/about_me/index.html
+++ b/about_me/index.html
@@ -159,7 +159,7 @@ I write/make music (DTM), and for every releases I'll post my musics in this web
             </div>
             <div class="row row-copirayt">
                 <p class="mbr-text mb-0 mbr-fonts-style mbr-white align-center display-7">
-                    © t404:null 2021 - All Rights Reserved</p>
+                    © t404:null 2021-2023 - All Rights Reserved</p>
             </div>
         </div>
     </div>
