--- a/hello.world(Zer/O)/index.html
+++ b/hello.world(Zer/O)/index.html
@@ -106,8 +106,7 @@ Bandcamp">
                     <div class="card-box align-center">
                         <h1 class="card-title mbr-fonts-style mb-3 display-2">
                             <strong>hello.world(Zer/O)</strong></h1>
-                        <p class="mbr-text mbr-fonts-style display-7">"What can I see... a new world...?<br>It appears, that I am living in a world, where no-one lives..."<br>
-                          <br>"hello.world(Zer/O)" is a first release from t404:null at 08.22.2021 on Youtube, Bandcamp, and Soundcloud.<br>&nbsp;It was also the first song t404:null makes with tons ”easter eggs” and mixed with more-styles genre called ”Full-Flavor”(200step, UK Hardcore, Electronic, Dance, and more..).<br><br>Available in:<br><a href="https://music.apple.com/album/hello-world-zer-o-single/1583561848" class="text-primary">Itunes/Apple Music</a><br><a href="https://open.spotify.com/album/0MX0zluXBvEerdCL12Cd1s" class="text-primary">Spotify(Release date at 09.20.2021)</a><br><a href="https://youtu.be/0apqJaWY5QM" class="text-primary">YouTube</a><br><a href="https://youtu.be/kVX6kdnvhAo" class="text-primary">YouTube Music(Release date at 09.20.2021)<br><a href="https://m.soundcloud.com/t404null/helloworldzero" class="text-primary">Soundcloud</a><br><a href="https://t404null.bandcamp.com/album/hello-world-zer-o" class="text-primary">Bandcamp</a></p>
+                      <p class="mbr-text mbr-fonts-style display-7">"What can I see... a new world...?<br>It appears, that I am living in a world, where no-one lives..."<br><br>"hello.world(Zer/O)" is a first release from t404:null at 08.22.2021 on Youtube, Bandcamp, and Soundcloud.<br>&nbsp;It was also the first song t404:null makes with tons ”easter eggs” and mixed with more-styles genre called ”Full-Flavor”(200step, UK Hardcore, Electronic, Dance, and more..).<br><br>Available in:<br><a href="https://music.apple.com/album/hello-world-zer-o-single/1583561848" class="text-primary">Itunes/Apple Music</a><br><a href="https://open.spotify.com/album/0MX0zluXBvEerdCL12Cd1s" class="text-primary">Spotify(Release date at 09.20.2021)</a><br><a href="https://youtu.be/0apqJaWY5QM" class="text-primary">YouTube</a><br><a href="https://music.youtube.com/watch?v=kVX6kdnvhAo" class="text-primary">YouTube Music(Release date at 09.20.2021)</a><br><a href="https://m.soundcloud.com/t404null/helloworldzero" class="text-primary">Soundcloud</a><br><a href="https://t404null.bandcamp.com/album/hello-world-zer-o" class="text-primary">Bandcamp</a></p>
                         
                     </div>
                 </div>
@@ -181,7 +180,7 @@ Bandcamp">
             </div>
             <div class="row row-copirayt">
                 <p class="mbr-text mb-0 mbr-fonts-style mbr-white align-center display-7">
-                    © t404:null 2021 - All Rights Reserved</p>
+                    © t404:null 2021-2023 - All Rights Reserved</p>
             </div>
         </div>
     </div>
