--- a/possession/index.html
+++ b/possession/index.html
@@ -176,7 +176,7 @@ Bandcamp">
             </div>
             <div class="row row-copirayt">
                 <p class="mbr-text mb-0 mbr-fonts-style mbr-white align-center display-7">
-                    © t404:null 2021 - All Rights Reserved</p>
+                    © t404:null 2021-2023 - All Rights Reserved</p>
             </div>
         </div>
     </div>
