--- a/oblitus_requiem/index.html
+++ b/oblitus_requiem/index.html
@@ -100,8 +100,8 @@ and more...">
                     <div class="card-box align-center">
                         <h1 class="card-title mbr-fonts-style mb-3 display-2">
                             <strong>Oblitus Requiem \\Against the Forsaken Legacy//</strong></h1>
-                        <p class="mbr-text mbr-fonts-style display-7">"until you reach it..."<br>
-                          <br>"Oblitus Requiem \\Against the Forsaken Legacy//" is a custom track for a Grand Finals Tiebreaker of VNMC2023 made by t404:null, and is released on Youtube, Bandcamp and Soundcloud at Aug. 12th 2023...<br><br><br>Available on:<br><a href="https://youtu.be/c1WtqWyt1IU" class="text-primary">YouTube</a><br><a href="https://m.soundcloud.com/t404null/oblitus-requiem" class="text-primary">Soundcloud</a><br><a href="https://t404null.bandcamp.com/album/oblitus-requiem-against-the-forsaken-legacy" class="text-primary">Bandcamp</a></p>
+                        <p class="mbr-text mbr-fonts-style display-7">"Even if you don't remember me now, I will bring the you I once knew back from them."<br><br>"For what I am going to do,<br>for the bloodshed I am going to create,<br>for the acts people will deem sinful I am going to commit;"<br>
+                          <br>"Oblitus Requiem \\Against the Forsaken Legacy//" is a custom track made for Grand Finals Tiebreaker of VNMC2023 (Vietnamese National Mania Championship (4k)) made by t404:null, and is released / published on Youtube, Bandcamp and Soundcloud at Aug. 12th 2023...<br><br><br>Available on:<br><a href="https://youtu.be/c1WtqWyt1IU" class="text-primary">YouTube</a><br><a href="https://m.soundcloud.com/t404null/oblitus-requiem" class="text-primary">Soundcloud</a><br><a href="https://t404null.bandcamp.com/album/oblitus-requiem-against-the-forsaken-legacy" class="text-primary">Bandcamp</a></p>
                         
                     </div>
                 </div>
