--- a/release/index.html
+++ b/release/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>t404:null | Home</title>
+    <title>t404:null | Releases</title>
     <meta
       name="description"
       content="Hello there! I'm t404:null (a.k.a t404owo).
@@ -12,7 +12,6 @@ I write/make/produce EDM music(DTM), and for every releases I'll post my music o
       type="image/x-icon"
       href="https://cdn.glitch.global/2d9e31c1-a947-46cd-9fd2-8c92be70abe2/t404_null%20Icon.png"
     />
-    <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="/assets/css/main.css" />
   </head>
 
@@ -175,45 +174,7 @@ I write/make/produce EDM music(DTM), and for every releases I'll post my music o
       </div>
     </nav>
     <main>
-      <div class="container">
-        <div class="carousel">
-          <div class="slider-bg"></div>
-          <div class="slider">
-            <section>
-              <div>
-                <h1 class="title">Obj 1</h1>
-                <p class="desc">Obj 1</p>
-              </div>
-            </section>
-            <section>
-              <div>
-                <h1 class="title">Obj 2</h1>
-                <p class="desc">Obj 2</p>
-              </div>
-            </section>
-            <section>
-              <div>
-                <h1 class="title">Obj 3 (long text)</h1>
-                <p class="desc">
-                  Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed
-                  diam nonumy eirmod tempor invidunt ut labore et dolore magna
-                  aliquyam
-                </p>
-              </div>
-            </section>
-          </div>
-          <div class="control">
-            <span class="prev">&lt;</span>
-            <span class="next">&gt;</span>
-          </div>
-          <ul class="pgctrl"></ul>
-        </div>
-      </div>
-      <div></div>
-      <script src="/assets/js/index.js" type="text/javascript"></script>
-      <!--💀-->
-      <hr />
-      <h1 class="topic"><a href="/release">Releases (Click for more)</a></h1>
+      <h1 class="topic">Releases</h1>
       <div class="album-cards">
         <a class="card" href="/release/hello.world(Zer/O)">
           <div
@@ -274,85 +235,6 @@ I write/make/produce EDM music(DTM), and for every releases I'll post my music o
             "Even if you don't remember me now, I will bring the you I once knew
             back from them."
           </p>
-        </a>
-      </div>
-
-      <h1 class="topic"><a href="/activity">Activities</a></h1>
-      <div class="half-image-cards">
-        <a class="card" href="/activity">
-          <div
-            class="bg-img"
-            style="
-              background-image: url(https://cdn.glitch.global/f594d6b7-e72e-477c-b5cb-d71abbd39f44/fof-genesis.png);
-            "
-          ></div>
-          <h2>Fanmade of Fighters I: Genesis</h2>
-          <p>BOF-like Contest Releases.</p>
-          <p>
-            Our team (Sine Fine Stellae) Achieved #2 :D<br /><br /><strong
-              >A Lake With Endless Stars</strong
-            >
-            is one of the soundtracks from Sine Fine Stellae produced by me,
-            thanks to the help of Riprider500 and more people :D
-          </p>
-        </a>
-        <a class="card" href="/activity">
-          <div
-            class="bg-img"
-            style="
-              background-image: url(https://cdn.glitch.global/f594d6b7-e72e-477c-b5cb-d71abbd39f44/vnmc2023.png?v=1717348650235);
-            "
-          ></div>
-          <h2>VNMC 2023</h2>
-          <p>
-            (Vietnamese National Mania Championship 2023) Grand Finals
-            Tiebreaker by me (t404:null)
-          </p>
-          <p>
-            <strong
-              >Oblitus Requiem &bsol;&bsol;Against the Forsaken Legacy//</strong
-            ><br /><br />
-            "Even if you don't remember me now, I will bring the you I once knew
-            back from them."
-            <br /><br />Sivelia (the host of VNMC) has asked me making a custom
-            soundtrack round for the tourney. The soundtrack get much likes and
-            subscribers on Youtube within 2 weeks as the tournament got a big
-            impact gained. Big thank you to all VNMC staffs for that!
-          </p>
-        </a>
-        <a class="card" href="/activity">
-          <div
-            class="bg-img"
-            style="
-              background-image: url(https://cdn.glitch.global/f594d6b7-e72e-477c-b5cb-d71abbd39f44/glitch1.jpg);
-            "
-          ></div>
-          <h2>VNMC 2024 (???)</h2>
-          <p>???</p>
-          <p>
-            Li4tLiAuLS0gLS4uIC0tLi4u<br />&bsol;-...-4buoe2v1qZuiULSrOPuzXZBn<br />YZt0ULSr9PuzvfuiaZwo5ZBseZB39<br />fuzpLxn9PurYZtz4PtzpVSlC3u3UrviaZO
-          </p>
-        </a>
-        <a class="card" href="/project">
-          <div
-            class="bg-img"
-            style="
-              background-image: url(https://cdn.glitch.global/f594d6b7-e72e-477c-b5cb-d71abbd39f44/glitch2.jpg);
-            "
-          ></div>
-          <h2>VNMC 2024 (???) (w/ ??? as ???)</h2>
-          <p>???</p>
-        </a>
-        <a class="card" href="/activity">
-          <div
-            class="bg-img"
-            style="
-              background-image: url(https://cdn.glitch.global/f594d6b7-e72e-477c-b5cb-d71abbd39f44/glich3.jpg);
-            "
-          ></div>
-          <h2>???? 5 (????2024) (w/ ??? as ???)</h2>
-          <p>???</p>
-          <p>???</p>
         </a>
       </div>
     </main>
