--- a/release/Oblitus_Requiem/index.html
+++ b/release/Oblitus_Requiem/index.html
@@ -1,20 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>t404:null | hello.world(Zer/O)</title>
-    <meta name="description" content="”What do I see... a new world...?
-It appears, that I am living in a world, where no-one lives...”
-
-”hello.world(Zer/O)” is a first release from t404:null at 08.22.2022 on Youtube, spotify.
- It was also the first song t404:null makes with tons of ”easter eggs” and mixed with more-styles genre called ”Full-Flavor”(200step, UK Hardcore, Electronic, Dance, and more..).
-
-Available in:
-Itunes(Release date at 09.20.2021)
-Spotify(Release date at 09.20.2021)
+    <title>t404:null | Oblitus Requiem \\Against the Forsaken Legacy//</title>
+    <meta name="description" 
+          content="”Oblitus Requiem \\Against the Forsaken Legacy//” is a custom track for a Grand Finals Tiebreaker of VNMC2023 made by t404:null, and is released on Youtube, Bandcamp and Soundcloud at Aug. 12th 2023...
+Available on:
 YouTube
-YouTube Music(Release date at 09.20.2021)
 Soundcloud
-Bandcamp">
+Bandcamp,
+Spotify (31.08.2023)
+and more...">
     <link rel="icon" type="image/x-icon" href="https://cdn.glitch.global/2d9e31c1-a947-46cd-9fd2-8c92be70abe2/t404_null%20Icon.png" />
     <link rel="stylesheet" type="text/css" href="/assets/css/main.css" />
   </head>
@@ -195,25 +190,30 @@ Bandcamp">
       </div>
     </nav>
     <main>
-      <div class="release-track" style="background-image: url(https://t404null.glitch.me/assets/images/image1.png);background-size:cover;background-position:center;">
+      <div class="release-track" style="
+          background-image: url(https://cdn.glitch.global/f594d6b7-e72e-477c-b5cb-d71abbd39f44/oblitus-requiem.png);
+          background-size: cover;
+          background-position: center;
+        ">
         <div class="text-box">
           <h1 class="title">
-            <strong>hello.world(Zer/O)</strong>
+            <strong>Oblitus Requiem \\Against the Forsaken Legacy//</strong>
           </h1>
-          <p class="description"> "What can I see... a new world...? <br />It appears, that I am living in a world, where no-one lives..." <br />
-            <br />"hello.world(Zer/O)" is a first release from t404:null at 08.22.2021 on Youtube, Bandcamp, and Soundcloud. <br />&nbsp;It was also the first song t404:null makes with tons ”easter eggs” and mixed with more-styles genre called ”Full-Flavor”(200step, UK Hardcore, Electronic, Dance, and more..). <br />
-            <br />Available in: <br />
-            <a href="https://music.apple.com/album/hello-world-zer-o-single/1583561848" class="text-primary">Itunes/Apple Music</a>
+          <p class="description"> "Even if you don't remember me now, I will bring the you I once knew back from them." </p>
+          <div class="long-break"></div>
+          <p class="description"> "For what I am going to do, for the bloodshed I am going to create, for the acts people will deem sinful I am going to commit;" </p>
+          <p class="description"> "Oblitus Requiem \\Against the Forsaken Legacy//" is a custom track made for Grand Finals Tiebreaker of VNMC2023 (Vietnamese National Mania Championship (4K)) made by t404:null, and is released / published on Youtube, Bandcamp and Soundcloud at Aug. 12th 2023... </p>
+          <p>
+            <br />Available on: <br />
+            <a href="https://youtu.be/c1WtqWyt1IU" class="text-primary">YouTube</a>
             <br />
-            <a href="https://open.spotify.com/album/0MX0zluXBvEerdCL12Cd1s" class="text-primary">Spotify(Release date at 09.20.2021)</a>
+            <a href="https://m.soundcloud.com/t404null/oblitus-requiem" class="text-primary">Soundcloud</a>
             <br />
-            <a href="https://youtu.be/0apqJaWY5QM" class="text-primary">YouTube</a>
+            <a href="https://t404null.bandcamp.com/album/oblitus-requiem-against-the-forsaken-legacy" class="text-primary">Bandcamp</a>
             <br />
-            <a href="https://music.youtube.com/watch?v=kVX6kdnvhAo" class="text-primary">YouTube Music(Release date at 09.20.2021)</a>
+            <a href="https://music.apple.com/album/oblitus-requiem-against-the-forsaken-legacy-single/1702294902" class="text-primary">Itunes / Apple Music</a>
             <br />
-            <a href="https://m.soundcloud.com/t404null/helloworldzero" class="text-primary">Soundcloud</a>
-            <br />
-            <a href="https://t404null.bandcamp.com/album/hello-world-zer-o" class="text-primary">Bandcamp</a>
+            <a href="https://open.spotify.com/album/7xJY39U6M3Z5NuNzt2GnCK" class="text-primary">Spotify</a>
           </p>
         </div>
       </div>
