--- a/about_me/index.html
+++ b/about_me/index.html
@@ -1,29 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>t404:null | hello.world(Zer/O)</title>
-    <meta name="description" content="”What do I see... a new world...?
-It appears, that I am living in a world, where no-one lives...”
-
-”hello.world(Zer/O)” is a first release from t404:null at 08.22.2022 on Youtube, spotify.
- It was also the first song t404:null makes with tons of ”easter eggs” and mixed with more-styles genre called ”Full-Flavor”(200step, UK Hardcore, Electronic, Dance, and more..).
-
-Available in:
-Itunes(Release date at 09.20.2021)
-Spotify(Release date at 09.20.2021)
-YouTube
-YouTube Music(Release date at 09.20.2021)
-Soundcloud
-Bandcamp">
-    <link rel="icon" type="image/x-icon" href="https://cdn.glitch.global/2d9e31c1-a947-46cd-9fd2-8c92be70abe2/t404_null%20Icon.png" />
+    <title>t404:null | Home</title>
+    <meta
+      name="description"
+      content="Hello there! I'm t404:null (a.k.a t404owo).
+I write/make/produce EDM music(DTM), and for every releases I'll post my music on this website. If you have any requests or questions, feel free contact me."
+    />
+    <link
+      rel="icon"
+      type="image/x-icon"
+      href="https://cdn.glitch.global/2d9e31c1-a947-46cd-9fd2-8c92be70abe2/t404_null%20Icon.png"
+    />
+    <meta charset="UTF-8" />
     <link rel="stylesheet" type="text/css" href="/assets/css/main.css" />
   </head>
+
   <body>
     <nav>
       <ul class="menu">
         <li>
           <a href="/">
-            <img src="https://cdn.glitch.global/f594d6b7-e72e-477c-b5cb-d71abbd39f44/logo.png?v=1716494259675" alt="t404:null" />
+            <img
+              src="https://cdn.glitch.global/f594d6b7-e72e-477c-b5cb-d71abbd39f44/logo.png?v=1716494259675"
+              alt="t404:null"
+            />
           </a>
         </li>
         <li>
@@ -110,8 +111,11 @@ Bandcamp">
           </a>
         </li>
         <li>
-          <button class="burger" onclick="this.classList.toggle('open');
-                                document.querySelector('.dropdown').classList.toggle('dropdown-open');">
+          <button
+            class="burger"
+            onclick="this.classList.toggle('open');
+                                document.querySelector('.dropdown').classList.toggle('dropdown-open');"
+          >
             <div id="hamburger">
               <span></span>
               <span></span>
@@ -195,25 +199,27 @@ Bandcamp">
       </div>
     </nav>
     <main>
-      <div class="release-track" style="background-image: url(https://t404null.glitch.me/assets/images/image1.png);background-size:cover;background-position:center;">
-        <div class="text-box">
-          <h1 class="title">
-            <strong>hello.world(Zer/O)</strong>
-          </h1>
-          <p class="description"> "What can I see... a new world...? <br />It appears, that I am living in a world, where no-one lives..." <br />
-            <br />"hello.world(Zer/O)" is a first release from t404:null at 08.22.2021 on Youtube, Bandcamp, and Soundcloud. <br />&nbsp;It was also the first song t404:null makes with tons ”easter eggs” and mixed with more-styles genre called ”Full-Flavor”(200step, UK Hardcore, Electronic, Dance, and more..). <br />
-            <br />Available in: <br />
-            <a href="https://music.apple.com/album/hello-world-zer-o-single/1583561848" class="text-primary">Itunes/Apple Music</a>
-            <br />
-            <a href="https://open.spotify.com/album/0MX0zluXBvEerdCL12Cd1s" class="text-primary">Spotify(Release date at 09.20.2021)</a>
-            <br />
-            <a href="https://youtu.be/0apqJaWY5QM" class="text-primary">YouTube</a>
-            <br />
-            <a href="https://music.youtube.com/watch?v=kVX6kdnvhAo" class="text-primary">YouTube Music(Release date at 09.20.2021)</a>
-            <br />
-            <a href="https://m.soundcloud.com/t404null/helloworldzero" class="text-primary">Soundcloud</a>
-            <br />
-            <a href="https://t404null.bandcamp.com/album/hello-world-zer-o" class="text-primary">Bandcamp</a>
+      <div style="justify-content: center; padding: 10%">
+        <p style="font-size: 2.5rem">Hi there!</p>
+        <div style="font-size: 1.5rem">
+          <p>I'm t404:null (a.k.a t404owo).</p>
+          <p>
+            I write/make music (DTM), and I'll post every releases and events on
+            this website. I also do program and develope stuffs (as t404owo).
+          </p>
+          <p>
+            To be honest, I currently am a highschool student and producing
+            songs is still a part-time thing for me. And since I'm not too
+            experienced at making songs. I hope you can help and support me for
+            reaching my 1st goal being an artist/producer like Camellia,
+            Au5/Blacklolita or BlackY. :D
+          </p>
+          <p>
+            About my songs / soundtracks:
+            <br>The music genre I enjoy to make is hard-EDM (includes Hardcore, Dubstep and more...) or melodic/orchestric, I might make music with styles those seem simillar to Camellia's, Blacklolita's or any artist's musics.
+          </p>
+          <p>
+            If you have any requests or questions, feel free to <a href="/contacts">contact me.</a>
           </p>
         </div>
       </div>
