--- a/contacts/index.html
+++ b/contacts/index.html
@@ -1,21 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>t404:null | hello.world(Zer/O)</title>
-    <meta name="description" content="”What do I see... a new world...?
-It appears, that I am living in a world, where no-one lives...”
-
-”hello.world(Zer/O)” is a first release from t404:null at 08.22.2022 on Youtube, spotify.
- It was also the first song t404:null makes with tons of ”easter eggs” and mixed with more-styles genre called ”Full-Flavor”(200step, UK Hardcore, Electronic, Dance, and more..).
-
-Available in:
-Itunes(Release date at 09.20.2021)
-Spotify(Release date at 09.20.2021)
-YouTube
-YouTube Music(Release date at 09.20.2021)
-Soundcloud
-Bandcamp">
+    <title>t404:null | Home</title>
+    <meta name="description" content="Hello there! I'm t404:null (a.k.a t404owo).
+I write/make/produce EDM music(DTM), and for every releases I'll post my music on this website. If you have any requests or questions, feel free contact me." />
     <link rel="icon" type="image/x-icon" href="https://cdn.glitch.global/2d9e31c1-a947-46cd-9fd2-8c92be70abe2/t404_null%20Icon.png" />
+    <meta charset="UTF-8" />
     <link rel="stylesheet" type="text/css" href="/assets/css/main.css" />
   </head>
   <body>
@@ -195,28 +185,35 @@ Bandcamp">
       </div>
     </nav>
     <main>
-      <div class="release-track" style="background-image: url(https://t404null.glitch.me/assets/images/image1.png);background-size:cover;background-position:center;">
-        <div class="text-box">
-          <h1 class="title">
-            <strong>hello.world(Zer/O)</strong>
-          </h1>
-          <p class="description"> "What can I see... a new world...? <br />It appears, that I am living in a world, where no-one lives..." <br />
-            <br />"hello.world(Zer/O)" is a first release from t404:null at 08.22.2021 on Youtube, Bandcamp, and Soundcloud. <br />&nbsp;It was also the first song t404:null makes with tons ”easter eggs” and mixed with more-styles genre called ”Full-Flavor”(200step, UK Hardcore, Electronic, Dance, and more..). <br />
-            <br />Available in: <br />
-            <a href="https://music.apple.com/album/hello-world-zer-o-single/1583561848" class="text-primary">Itunes/Apple Music</a>
+      <h1 class="topic">Contacts</h1>
+      <ul class="info contact-cards">
+        <li>
+          <strong class="title" style="color:#5b6"><b class="nf-icons icons">&#xf0369;</b> Phone (Messages Only)</strong>
+          <p class="desc">+49 (0) 15236754810</p>
+        </li>
+        <li>
+          <strong class="title" style="color:#555"><b class="nf-icons icons">&#xf42f;</b> Email</strong>
+          <p class="desc">
+            <a href="mailto:t404.null@gmail.com" class="text-info">t404.null@gmail.com</a>
             <br />
-            <a href="https://open.spotify.com/album/0MX0zluXBvEerdCL12Cd1s" class="text-primary">Spotify(Release date at 09.20.2021)</a>
+            <a href="mailto:t404owo@gmail.com" class="text-info">t404owo@gmail.com</a>
             <br />
-            <a href="https://youtu.be/0apqJaWY5QM" class="text-primary">YouTube</a>
+            <a href="mailto:tags4owo@gmail.com" class="text-info">tags4owo@gmail.com</a>
             <br />
-            <a href="https://music.youtube.com/watch?v=kVX6kdnvhAo" class="text-primary">YouTube Music(Release date at 09.20.2021)</a>
-            <br />
-            <a href="https://m.soundcloud.com/t404null/helloworldzero" class="text-primary">Soundcloud</a>
-            <br />
-            <a href="https://t404null.bandcamp.com/album/hello-world-zer-o" class="text-primary">Bandcamp</a>
           </p>
-        </div>
-      </div>
+        </li>
+        <li>
+          <a href="https://discord.gg/YJmkAFbKFX" style="color:#5865F2; background:none;">
+          <strong class="title"><b class="nf-icons icons">&#xf1ff;</b> Discord</strong>
+          <p class="desc">https://discord.gg/YJmkAFbKFX</p>
+            </a>
+        </li>
+        <li><a href="https://x.com/t404_null" style="color:black; background: none">
+          <strong class="title"><b class="icons">&Xopf;</b> X / Twitter</strong>
+          <p class="desc">@t404_null</p>
+          </a>
+        </li>
+      </ul>
     </main>
     <div class="footer">&copy; t404:null 2021-2024 - All Rights Reserved</div>
   </body>
