--- a/index.html
+++ b/index.html
@@ -2,29 +2,18 @@
 <html lang="en">
   <head>
     <title>t404:null | Home</title>
-    <meta
-      name="description"
-      content="Hello there! I'm t404:null (a.k.a t404owo).
-I write/make/produce EDM music(DTM), and for every releases I'll post my music on this website. If you have any requests or questions, feel free contact me."
-    />
-    <link
-      rel="icon"
-      type="image/x-icon"
-      href="https://cdn.glitch.global/2d9e31c1-a947-46cd-9fd2-8c92be70abe2/t404_null%20Icon.png"
-    />
-    <meta charset="UTF-8">
+    <meta name="description" content="Hello there! I'm t404:null (a.k.a t404owo).
+I write/make/produce EDM music(DTM), and for every releases I'll post my music on this website. If you have any requests or questions, feel free contact me." />
+    <link rel="icon" type="image/x-icon" href="https://cdn.glitch.global/2d9e31c1-a947-46cd-9fd2-8c92be70abe2/t404_null%20Icon.png" />
+    <meta charset="UTF-8" />
     <link rel="stylesheet" type="text/css" href="/assets/css/main.css" />
   </head>
-
   <body>
     <nav>
       <ul class="menu">
         <li>
           <a href="/">
-            <img
-              src="https://cdn.glitch.global/f594d6b7-e72e-477c-b5cb-d71abbd39f44/logo.png?v=1716494259675"
-              alt="t404:null"
-            />
+            <img src="https://cdn.glitch.global/f594d6b7-e72e-477c-b5cb-d71abbd39f44/logo.png?v=1716494259675" alt="t404:null" />
           </a>
         </li>
         <li>
@@ -32,32 +21,44 @@ I write/make/produce EDM music(DTM), and for every releases I'll post my music o
         </li>
         <li class="menu-item">
           <a href="/">
-            <p><strong>Home</strong></p>
+            <p>
+              <strong>Home</strong>
+            </p>
           </a>
         </li>
         <li class="menu-item">
           <a href="/release">
-            <p><strong>Releases</strong></p>
+            <p>
+              <strong>Releases</strong>
+            </p>
           </a>
         </li>
         <li class="menu-item">
           <a href="/activity">
-            <p><strong>Activities</strong></p>
+            <p>
+              <strong>Activities</strong>
+            </p>
           </a>
         </li>
         <li class="menu-item">
           <a href="/song_usage_terms">
-            <p><strong>Terms of Use</strong></p>
+            <p>
+              <strong>Terms of Use</strong>
+            </p>
           </a>
         </li>
         <li class="menu-item">
           <a href="/about_me">
-            <p><strong>About Me</strong></p>
+            <p>
+              <strong>About Me</strong>
+            </p>
           </a>
         </li>
         <li class="menu-item">
           <a href="/contacts">
-            <p><strong>My Contacts</strong></p>
+            <p>
+              <strong>My Contacts</strong>
+            </p>
           </a>
         </li>
       </ul>
@@ -99,11 +100,8 @@ I write/make/produce EDM music(DTM), and for every releases I'll post my music o
           </a>
         </li>
         <li>
-          <button
-            class="burger"
-            onclick="this.classList.toggle('open');
-                                document.querySelector('.dropdown').classList.toggle('dropdown-open');"
-          >
+          <button class="burger" onclick="this.classList.toggle('open');
+                                document.querySelector('.dropdown').classList.toggle('dropdown-open');">
             <div id="hamburger">
               <span></span>
               <span></span>
@@ -119,56 +117,68 @@ I write/make/produce EDM music(DTM), and for every releases I'll post my music o
       <div class="dropdown">
         <div class="dropdown-menu">
           <a href="/">
-            <p><strong>Home</strong></p>
+            <p>
+              <strong>Home</strong>
+            </p>
           </a>
           <a href="/release">
-            <p><strong>Releases</strong></p>
+            <p>
+              <strong>Releases</strong>
+            </p>
           </a>
           <a href="/activity">
-            <p><strong>Activities</strong></p>
+            <p>
+              <strong>Activities</strong>
+            </p>
           </a>
           <a href="/song_usage_terms">
-            <p><strong>Terms of Use</strong></p>
+            <p>
+              <strong>Terms of Use</strong>
+            </p>
           </a>
           <a href="/about_me">
-            <p><strong>About Me</strong></p>
+            <p>
+              <strong>About Me</strong>
+            </p>
           </a>
           <a href="/contacts">
-            <p><strong>My Contacts</strong></p>
+            <p>
+              <strong>My Contacts</strong>
+            </p>
           </a>
         </div>
         <hr class="dropdown-menu" />
         <div class="dropdown-social">
           <p>
             <a href="https://youtube.com/@t404_null">
-              <span class="icons nf-icons">&#xf16a;</span
-              ><strong class="social-name">Youtube</strong>
+              <span class="icons nf-icons">&#xf16a;</span>
+              <strong class="social-name">Youtube</strong>
             </a>
             <a href="https://x.com/t404_null">
-              <span class="icons"> &Xopf; </span
-              ><strong class="social-name">X/Twitter</strong>
+              <span class="icons"> &Xopf; </span>
+              <strong class="social-name">X/Twitter</strong>
             </a>
             <a href="https://t404null.bandcamp.com/">
-              <span class="icons nf-icons">&#xf2d5;</span
-              ><strong class="social-name">Bandcamp</strong>
+              <span class="icons nf-icons">&#xf2d5;</span>
+              <strong class="social-name">Bandcamp</strong>
             </a>
             <a href="https://open.spotify.com/artist/7jNOPuWk28EUX69mrp4ITL/">
-              <span class="icons nf-icons">&#xf04c7;</span
-              ><strong class="social-name">Spotify</strong>
+              <span class="icons nf-icons">&#xf04c7;</span>
+              <strong class="social-name">Spotify</strong>
             </a>
           </p>
           <p>
             <a href="https://music.apple.com/artist/t404-null/1583561849">
-              <span class="icons nf-icons">&#xf2eb;</span
-              ><strong class="social-name">Apple Music</strong>
+              <span class="icons nf-icons">&#xf2eb;</span>
+              <strong class="social-name">Apple Music</strong>
             </a>
             <a href="https://soundcloud.com/t404null">
-              <span class="icons nf-icons">&#xf1be;</span
-              ><strong class="social-name">SoundCloud</strong>
+              <span class="icons nf-icons">&#xf1be;</span>
+              <strong class="social-name">SoundCloud</strong>
             </a>
             <a href="https://discord.gg/YJmkAFbKFX">
-              <span class="icons nf-icons">&#xf1ff;</span
-              ><strong class="social-name">Discord</strong>
+              <span class="icons nf-icons">&#xf1ff;</span>
+              <strong class="social-name">Discord</strong>
             </a>
           </p>
         </div>
@@ -181,24 +191,20 @@ I write/make/produce EDM music(DTM), and for every releases I'll post my music o
           <div class="slider">
             <section>
               <div>
-                <h1 class="title">Obj 1</h1>
-                <p class="desc">Obj 1</p>
+                <h1 class="title">This page is still under construction.</h1>
+                <p class="desc">The page is still under development, in cases, this page will change after reload or after a few days and a reload.</p>
               </div>
             </section>
             <section>
               <div>
-                <h1 class="title">Obj 2</h1>
-                <p class="desc">Obj 2</p>
+                <h1 class="title">Oblitus Requiem \\Against the Forsaken Legacy//</h1>
+                <p class="desc">"Even if you don't remember me now, I will bring the you I once knew back from them."</p>
               </div>
             </section>
             <section>
               <div>
-                <h1 class="title">Obj 3 (long text)</h1>
-                <p class="desc">
-                  Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed
-                  diam nonumy eirmod tempor invidunt ut labore et dolore magna
-                  aliquyam
-                </p>
+                <h1 class="title">A Lake With Endless Stars</h1>
+                <p class="desc"> "Under the coruscating night sky, gaze into the kaleidoscopic waters..." </p>
               </div>
             </section>
           </div>
@@ -213,149 +219,104 @@ I write/make/produce EDM music(DTM), and for every releases I'll post my music o
       <script src="/assets/js/index.js" type="text/javascript"></script>
       <!--💀-->
       <hr />
-      <h1 class="topic"><a href="/release">Releases (Click for more)</a></h1>
+      <h1 class="topic">
+        <a href="/release">Releases (Click for more)</a>
+      </h1>
       <div class="album-cards">
         <a class="card" href="/release/hello.world(Zer/O)">
-          <div
-            class="bg-img"
-            style="
+          <div class="bg-img" style="
               background-image: url(https://t404null.glitch.me/assets/images/image0.png);
-            "
-          ></div>
+            "></div>
           <h2>hello.world(Zer/O)</h2>
           <p>First Release</p>
           <p>What do I see... a new world...?</p>
         </a>
         <a class="card" href="/release">
-          <div
-            class="bg-img"
-            style="
+          <div class="bg-img" style="
               background-image: url(https://cdn.glitch.me/f6cb427c-2cdb-4693-bc00-9d3e2991008c%2FC9B955D3-3A2A-4B83-92EB-EBCBDEB2B458.jpeg);
-            "
-          ></div>
+            "></div>
           <h2>PoΣΣεssion (Possession)</h2>
           <p>Formerly "Mayonaka Dancehall!!!" (:DACHiTRAX) Release.</p>
           <p>Ghost and monsters are gathering you...</p>
         </a>
         <a class="card" href="/release">
-          <div
-            class="bg-img"
-            style="
+          <div class="bg-img" style="
               background-image: url(https://cdn.glitch.global/2d9e31c1-a947-46cd-9fd2-8c92be70abe2/Hyper_Limimality.png);
-            "
-          ></div>
+            "></div>
           <h2>Hyper Liminality</h2>
           <p>t404:null &amp; trung-nova &amp; AXiS</p>
           <p>"until you reach it... the two hyper sides."</p>
         </a>
         <a class="card" href="/release">
-          <div
-            class="bg-img"
-            style="
+          <div class="bg-img" style="
               background-image: url(https://cdn.glitch.global/2d9e31c1-a947-46cd-9fd2-8c92be70abe2/A_Lake_With_Endless_Stars.png);
-            "
-          ></div>
+            "></div>
           <h2>A Lake With Endless Stars</h2>
-          <p>
-            "Under the coruscating night sky, gaze into the kaleidoscopic
-            waters..."
-          </p>
+          <p> "Under the coruscating night sky, gaze into the kaleidoscopic waters..." </p>
         </a>
-        <a class="card" href="/release">
-          <div
-            class="bg-img"
-            style="
+        <a class="card" href="/release/Oblitus_Requiem">
+          <div class="bg-img" style="
               background-image: url(https://cdn.glitch.global/f594d6b7-e72e-477c-b5cb-d71abbd39f44/oblitus-requiem.png);
-            "
-          ></div>
+            "></div>
           <h2>Oblitus Requiem \\Against the Forsaken Legacy//</h2>
           <p>VNMC2023 Grand Finals Tiebreaker.</p>
-          <p>
-            "Even if you don't remember me now, I will bring the you I once knew
-            back from them."
-          </p>
+          <p> "Even if you don't remember me now, I will bring the you I once knew back from them." </p>
         </a>
       </div>
-
-      <h1 class="topic"><a href="/activity">Activities</a></h1>
+      <hr />
+      <h1 class="topic">
+        <a href="/activity">Activities</a>
+      </h1>
       <div class="half-image-cards">
         <a class="card" href="/activity">
-          <div
-            class="bg-img"
-            style="
+          <div class="bg-img" style="
               background-image: url(https://cdn.glitch.global/f594d6b7-e72e-477c-b5cb-d71abbd39f44/fof-genesis.png);
-            "
-          ></div>
+            "></div>
           <h2>Fanmade of Fighters I: Genesis</h2>
           <p>BOF-like Contest Releases.</p>
-          <p>
-            Our team (Sine Fine Stellae) Achieved #2 :D<br /><br /><strong
-              >A Lake With Endless Stars</strong
-            >
-            is one of the soundtracks from Sine Fine Stellae produced by me,
-            thanks to the help of Riprider500 and more people :D
+          <p> Our team (Sine Fine Stellae) Achieved #2 :D <br />
+            <br />
+            <strong>A Lake With Endless Stars</strong> is one of the soundtracks from Sine Fine Stellae produced by me, thanks to the help of Riprider500 and more people :D
           </p>
         </a>
         <a class="card" href="/activity">
-          <div
-            class="bg-img"
-            style="
+          <div class="bg-img" style="
               background-image: url(https://cdn.glitch.global/f594d6b7-e72e-477c-b5cb-d71abbd39f44/vnmc2023.png?v=1717348650235);
-            "
-          ></div>
+            "></div>
           <h2>VNMC 2023</h2>
+          <p> (Vietnamese National Mania Championship 2023) Grand Finals Tiebreaker by me (t404:null) </p>
           <p>
-            (Vietnamese National Mania Championship 2023) Grand Finals
-            Tiebreaker by me (t404:null)
-          </p>
-          <p>
-            <strong
-              >Oblitus Requiem &bsol;&bsol;Against the Forsaken Legacy//</strong
-            ><br /><br />
-            "Even if you don't remember me now, I will bring the you I once knew
-            back from them."
-            <br /><br />Sivelia (the host of VNMC) has asked me making a custom
-            soundtrack round for the tourney. The soundtrack get much likes and
-            subscribers on Youtube within 2 weeks as the tournament got a big
-            impact gained. Big thank you to all VNMC staffs for that!
+            <strong>Oblitus Requiem &bsol;&bsol;Against the Forsaken Legacy//</strong>
+            <br />
+            <br /> "Even if you don't remember me now, I will bring the you I once knew back from them." <br />
+            <br />Sivelia (the host of VNMC) has asked me making a custom soundtrack round for the tourney. The soundtrack get much likes and subscribers on Youtube within 2 weeks as the tournament got a big impact gained. Big thank you to all VNMC staffs for that!
           </p>
         </a>
         <a class="card" href="/activity">
-          <div
-            class="bg-img"
-            style="
+          <div class="bg-img" style="
               background-image: url(https://cdn.glitch.global/f594d6b7-e72e-477c-b5cb-d71abbd39f44/glitch1.jpg);
-            "
-          ></div>
+            "></div>
           <h2>VNMC 2024 (???)</h2>
           <p>???</p>
-          <p>
-            Li4tLiAuLS0gLS4uIC0tLi4u<br />&bsol;-...-4buoe2v1qZuiULSrOPuzXZBn<br />YZt0ULSr9PuzvfuiaZwo5ZBseZB39<br />fuzpLxn9PurYZtz4PtzpVSlC3u3UrviaZO
-          </p>
+          <p> Li4tLiAuLS0gLS4uIC0tLi4u <br />&bsol;-...-4buoe2v1qZuiULSrOPuzXZBn <br />YZt0ULSr9PuzvfuiaZwo5ZBseZB39 <br />fuzpLxn9PurYZtz4PtzpVSlC3u3UrviaZO </p>
         </a>
         <a class="card" href="/project">
-          <div
-            class="bg-img"
-            style="
+          <div class="bg-img" style="
               background-image: url(https://cdn.glitch.global/f594d6b7-e72e-477c-b5cb-d71abbd39f44/glitch2.jpg);
-            "
-          ></div>
+            "></div>
           <h2>VNMC 2024 (???) (w/ ??? as ???)</h2>
           <p>???</p>
         </a>
         <a class="card" href="/activity">
-          <div
-            class="bg-img"
-            style="
+          <div class="bg-img" style="
               background-image: url(https://cdn.glitch.global/f594d6b7-e72e-477c-b5cb-d71abbd39f44/glich3.jpg);
-            "
-          ></div>
+            "></div>
           <h2>???? 5 (????2024) (w/ ??? as ???)</h2>
           <p>???</p>
           <p>???</p>
         </a>
       </div>
     </main>
-    <footer>&copy; t404:null 2021-2024 - All Rights Reserved</footer>
+    <div class="footer">&copy; t404:null 2021-2024 - All Rights Reserved</div>
   </body>
 </html>
