--- a/release/A_Lake_With_Endless_Stars/index.html
+++ b/release/A_Lake_With_Endless_Stars/index.html
@@ -1,21 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>t404:null | Home</title>
-    <meta
-      name="description"
-      content="Hello there! I'm t404:null (a.k.a t404owo).
-I write/make/produce EDM music(DTM), and for every releases I'll post my music on this website. If you have any requests or questions, feel free contact me."
-    />
+    <title>t404:null | A Lake With Endless Stars</title>
+    <meta name="description" 
+          content="”A Lake with Endless Stars” is the first song in 2023 from t404:null and is realeased at 9.4.2023 on Soundcloud, YouTube and Bandcamp and 9.5.2023 on distrubution platforms.
+The track is also a part of a fanmade event named ”Fanmade of Fighters”.
+Available on:
+YouTube
+Soundcloud
+Bandcamp,
+Spotify
+and more...">
     <link
       rel="icon"
       type="image/x-icon"
       href="https://cdn.glitch.global/2d9e31c1-a947-46cd-9fd2-8c92be70abe2/t404_null%20Icon.png"
     />
-    <meta charset="UTF-8" />
     <link rel="stylesheet" type="text/css" href="/assets/css/main.css" />
   </head>
-
   <body>
     <nav>
       <ul class="menu">
@@ -199,27 +201,57 @@ I write/make/produce EDM music(DTM), and for every releases I'll post my music o
       </div>
     </nav>
     <main>
-      <div style="justify-content: center; padding: 10%">
-        <p style="font-size: 2.5rem">Hi there!</p>
-        <div class="info" style="font-size: 1.5rem">
-          <p>I'm t404:null (a.k.a t404owo).</p>
-          <p>
-            I write/make music (DTM), and I'll post every releases and events on
-            this website. I also do program and develope stuffs (as t404owo).
+      <div
+        class="release-track"
+        style="
+          background-image: url(https://cdn.glitch.global/2d9e31c1-a947-46cd-9fd2-8c92be70abe2/A_Lake_With_Endless_Stars.png);
+          background-size: cover;
+          background-position: center;
+        "
+      >
+        <div class="text-box">
+          <h1 class="title">
+            <strong>A Lake with Endless Stars</strong>
+          </h1>
+          <p class="description">
+            "Under the coruscating night sky, gaze into the kaleidoscopic
+            waters..."
+          </p>
+          <div class="long-break"></div>
+          <p class="description">
+            "A Lake with Endless Stars" is the first song in 2023 from t404:null
+            and is realeased at 9.4.2023 on Soundcloud, YouTube and Bandcamp and
+            9.5.2023 on distrubution platforms.
           </p>
           <p>
-            To be honest, I currently am a highschool student and producing
-            songs is still a part-time thing for me. And since I'm not too
-            experienced at making songs. I hope you can help and support me for
-            reaching my 1st goal being an artist/producer like Camellia,
-            Au5/Blacklolita or BlackY. :D
-          </p>
-          <p>
-            About my songs / soundtracks:
-            <br>The music genre I enjoy to make is hard-EDM (includes Hardcore, Dubstep and more...) or melodic/orchestric, I might make music with styles those seem simillar to Camellia's, Blacklolita's or any artist's musics.
-          </p>
-          <p>
-            If you have any requests or questions, feel free to <a href="/contacts">contact me.</a>
+            <br />Available on: <br />
+            <a href="https://youtu.be/zutjmeOELoA" class="text-primary"
+              >YouTube</a
+            >
+            <br />
+            <a
+              href="https://m.soundcloud.com/t404null/a-lake-with-endless-stars"
+              class="text-primary"
+              >Soundcloud</a
+            >
+            <br />
+            <a
+              href="https://t404null.bandcamp.com/track/a-lake-with-endless-stars"
+              class="text-primary"
+              >Bandcamp</a
+            >
+            <br />
+            <a
+              href="https://music.apple.com/us/album/a-lake-with-endless-stars-single/1686073588"
+              class="text-primary"
+              >Itunes / Apple Music</a
+            >
+            <br />
+            <a
+              href="https://open.spotify.com/album/2zRZ033WRAaoA33Q0x1Cin"
+              class="text-primary"
+              >Spotify</a
+            >
           </p>
         </div>
       </div>
