--- a/release/index.html
+++ b/release/index.html
@@ -210,7 +210,7 @@ I write/make/produce EDM music(DTM), and for every releases I'll post my music o
           <p>t404:null &amp; trung-nova &amp; AXiS</p>
           <p>"until you reach it... the two hyper sides."</p>
         </a>
-        <a class="card" href="/release">
+        <a class="card" href="/release/A_Lake_With_Endless_Stars">
           <div class="bg-img" style="
               background-image: url(https://cdn.glitch.global/2d9e31c1-a947-46cd-9fd2-8c92be70abe2/A_Lake_With_Endless_Stars.png);
             "></div>
