New UI Update, still WIP

--- a/activity/index.html
+++ b/activity/index.html
@@ -231,7 +231,7 @@ I write/make/produce EDM music(DTM), and for every releases I'll post my music o
             Li4tLiAuLS0gLS4uIC0tLi4u<br />&bsol;-...-4buoe2v1qZuiULSrOPuzXZBn<br />YZt0ULSr9PuzvfuiaZwo5ZBseZB39<br />fuzpLxn9PurYZtz4PtzpVSlC3u3UrviaZO
           </p>
         </a>
-        <a class="card" href="/project">
+        <a class="card" href="/activity">
           <div
             class="bg-img"
             style="
