--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@ I write/make/produce EDM music(DTM), and for every releases I'll post my music o
             <section>
               <div>
                 <h1 class="title">This page is still under construction.</h1>
-                <p class="desc">The page is still under development, in cases, this page will change after reload or after a few days and a reload.</p>
+                <p class="desc">The page is still under development. In cases, this page will change after reload or after a few days and a reload.</p>
               </div>
             </section>
             <section>
@@ -300,7 +300,7 @@ I write/make/produce EDM music(DTM), and for every releases I'll post my music o
           <p>???</p>
           <p> Li4tLiAuLS0gLS4uIC0tLi4u <br />&bsol;-...-4buoe2v1qZuiULSrOPuzXZBn <br />YZt0ULSr9PuzvfuiaZwo5ZBseZB39 <br />fuzpLxn9PurYZtz4PtzpVSlC3u3UrviaZO </p>
         </a>
-        <a class="card" href="/project">
+        <a class="card" href="/activity">
           <div class="bg-img" style="
               background-image: url(https://cdn.glitch.global/f594d6b7-e72e-477c-b5cb-d71abbd39f44/glitch2.jpg);
             "></div>
