Updated the site's style, adjusted some JS for the future

--- a/activity/index.html
+++ b/activity/index.html
@@ -174,7 +174,7 @@ I write/make/produce EDM music(DTM), and for every releases I'll post my music o
         </div>
       </div>
     </nav>
-    <main>
+    <main class= "main-page">
       <h1 class="topic">Activities</h1>
       <div class="half-image-cards">
         <a class="card" href="/activity">
