--- a/contacts/index.html
+++ b/contacts/index.html
@@ -184,7 +184,7 @@ I write/make/produce EDM music(DTM), and for every releases I'll post my music o
         </div>
       </div>
     </nav>
-    <main>
+    <main class= "main-page">
       <h1 class="topic">Contacts</h1>
       <ul class="info contact-cards">
         <li>
