--- a/index.html
+++ b/index.html
@@ -184,29 +184,11 @@ I write/make/produce EDM music(DTM), and for every releases I'll post my music o
         </div>
       </div>
     </nav>
-    <main>
+    <main class="main-page">
       <div class="container">
         <div class="carousel">
           <div class="slider-bg"></div>
-          <div class="slider">
-            <section>
-              <div>
-                <h1 class="title">This page is still under construction.</h1>
-                <p class="desc">The page is still under development. In cases, this page will change after reload or after a few days and a reload.</p>
-              </div>
-            </section>
-            <section>
-              <div>
-                <h1 class="title">Oblitus Requiem \\Against the Forsaken Legacy//</h1>
-                <p class="desc">"Even if you don't remember me now, I will bring the you I once knew back from them."</p>
-              </div>
-            </section>
-            <section>
-              <div>
-                <h1 class="title">A Lake With Endless Stars</h1>
-                <p class="desc"> "Under the coruscating night sky, gaze into the kaleidoscopic waters..." </p>
-              </div>
-            </section>
+          <div class="slider" id="pages">
           </div>
           <div class="control">
             <span class="prev">&lt;</span>
@@ -216,7 +198,7 @@ I write/make/produce EDM music(DTM), and for every releases I'll post my music o
         </div>
       </div>
       <div></div>
-      <script src="/assets/js/index.js" type="text/javascript"></script>
+      <script src="/assets/js/index.js" type="module"></script>
       <!--💀-->
       <hr />
       <h1 class="topic">
