--- a/release/index.html
+++ b/release/index.html
@@ -183,7 +183,7 @@ I write/make/produce EDM music(DTM), and for every releases I'll post my music o
         </div>
       </div>
     </nav>
-    <main>
+    <main class= "main-page">
       <h1 class="topic">Releases</h1>
       <div class="album-cards">
         <a class="card" href="/release/hello.world(Zer/O)">
